премиум теперь в виде фрагмента, нужно доделать на добавлении услуги

--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -32,7 +32,7 @@
             <LinearLayout
                 android:id="@+id/guestLinearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="10dp"
                 android:orientation="vertical">
 
@@ -185,6 +185,15 @@
                             android:textColor="@color/black"
                             android:visibility="gone" />
                     </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/premiumGuestServiceLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:visibility="gone">
                 </LinearLayout>
 
             </LinearLayout>
