--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -101,8 +101,9 @@
     <!-- Style for titles -->
     <style name="myTitle">
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">22sp</item>
         <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <!-- Style for main text -->
