--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,6 +124,7 @@
         <item name="android:textCursorDrawable">@color/black</item>
         <item name="android:inputType">textPersonName|textCapSentences</item>
         <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="android:textColorHint">@color/hintColor</item>
     </style>
 
     <style name="mainTextMainScreen" parent="TextOnPages">
