--- a/app/src/main/res/layout/premium_element.xml
+++ b/app/src/main/res/layout/premium_element.xml
@@ -14,6 +14,7 @@
 
         <EditText
             style="@style/mainText"
+            android:id="@+id/codePremiumElement"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Код" />
