Фикс съезжющего текста на MS

--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -144,6 +144,7 @@
 
                 <LinearLayout
                     style="@style/block"
+                    android:id="@+id/premiumIconGuestServiceLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/block_text"
