--- a/app/src/main/res/layout/picked_comment.xml
+++ b/app/src/main/res/layout/picked_comment.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/block"
-    android:layout_width="350dp"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:background="@drawable/block_text"
@@ -22,7 +22,7 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
@@ -33,7 +33,6 @@
                 style="@style/mainTextMainScreen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Имя"
                 android:textSize="18sp" />
         </LinearLayout>
 
@@ -78,8 +77,7 @@
                 android:id="@+id/reviewPickedCommentText"
                 style="@style/defaultTextMainScreen"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="ASD" />
+                android:layout_height="match_parent"/>
         </LinearLayout>
     </ScrollView>
 
