--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -182,7 +182,7 @@
                 android:id="@+id/addServicesProfileBtn"
                 style="@style/smallMainButtonOther"
                 android:layout_width="wrap_content"
-                android:layout_height="36dp"
+                android:layout_height="@dimen/main_button_height"
                 android:layout_gravity="center"
                 android:layout_marginBottom="5dp"
                 android:text="@string/addServices" />
