--- a/app/src/main/res/layout/notification_canceled_element.xml
+++ b/app/src/main/res/layout/notification_canceled_element.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.chatElements.notification_canceled_element">
+    tools:context=".adapters.chatElements.notification_canceled_element">
 
     <TextView
         android:id="@+id/notification_canceled_elementText"
