--- a/app/src/main/res/layout/dialog_element.xml
+++ b/app/src/main/res/layout/dialog_element.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/block_text"
     android:orientation="horizontal"
     android:padding="10dp"
-    tools:context=".fragments.chatElements.DialogElement">
+    tools:context=".adapters.chatElements.DialogElement">
 
     <LinearLayout
         android:layout_width="wrap_content"
