--- a/app/src/main/res/layout/dialogs.xml
+++ b/app/src/main/res/layout/dialogs.xml
@@ -15,7 +15,8 @@
         app:layout_constraintTop_toTopOf="parent">
     </LinearLayout>
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/resultsDialogsRecycleView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="none"
@@ -23,16 +24,7 @@
         app:layout_constraintBottom_toTopOf="@+id/footerDialogsLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
-
-        <LinearLayout
-            android:id="@+id/mainDialogsLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:isScrollContainer="true"
-            android:orientation="vertical" />
-    </ScrollView>
-
-
+    </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
         android:id="@+id/footerDialogsLayout"
