--- a/app/src/main/res/layout/top_panel.xml
+++ b/app/src/main/res/layout/top_panel.xml
@@ -52,6 +52,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="0.3"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:visibility="gone">
 
         <ImageView
