--- a/app/src/main/res/layout/subscription_element.xml
+++ b/app/src/main/res/layout/subscription_element.xml
@@ -29,7 +29,7 @@
 
     <TextView
         android:id="@+id/subscribeSubscriptionElementText"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:fontFamily="@font/font_awesome_solid"
