--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -14,20 +14,15 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/resultsCommentsRecycleView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
         android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/footerCommentsLayout"
         app:layout_constraintTop_toBottomOf="@+id/headerCommentsLayout">
-
-        <LinearLayout
-            android:id="@+id/mainCommentsLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+    </android.support.v7.widget.RecyclerView>
 
 
     <LinearLayout
