--- a/app/src/main/res/layout/subscription_element.xml
+++ b/app/src/main/res/layout/subscription_element.xml
@@ -8,7 +8,7 @@
     android:layout_margin="20dp"
     android:background="@drawable/block_text"
     android:padding="10dp"
-    tools:context=".fragments.SubscriptionElement">
+    tools:context=".adapters.SubscriptionElement">
 
     <ImageView
         android:id="@+id/avatarSubscriptionElementImage"
