--- a/app/src/main/res/layout/swicher_element.xml
+++ b/app/src/main/res/layout/swicher_element.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/switcher"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
 
     <Button
-        android:id="@+id/leftSwicherElementBtn"
+        android:id="@+id/leftSwitcherElementBtn"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:background="@drawable/left_transparent_btn"
@@ -17,7 +18,7 @@
 
 
     <Button
-        android:id="@+id/rightSwicherElementBtn"
+        android:id="@+id/rightSwitcherElementBtn"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:background="@drawable/right_btn"
