--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -14,12 +14,26 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBarComments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/footerCommentsLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerCommentsLayout"
+        android:indeterminateTint= "@color/panelColor"
+        android:layout_gravity="center" />
+
+
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/resultsCommentsRecycleView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
         android:scrollbars="none"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/footerCommentsLayout"
         app:layout_constraintTop_toBottomOf="@+id/headerCommentsLayout">
     </android.support.v7.widget.RecyclerView>
