--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -14,11 +14,24 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBarGuestService"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/panelColor"
+        app:layout_constraintBottom_toTopOf="@+id/footerGuestServiceLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerGuestServiceLayout" />
+
     <ScrollView
+        android:id="@+id/guestServiceMainScroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="10dp"
         android:scrollbars="none"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/footerGuestServiceLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,8 +156,8 @@
 
 
                 <LinearLayout
-                    style="@style/block"
                     android:id="@+id/premiumIconGuestServiceLayout"
+                    style="@style/block"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/block_text"
@@ -187,6 +200,7 @@
                             android:visibility="gone" />
                     </LinearLayout>
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/premiumGuestServiceLayout"
                     android:layout_width="match_parent"
@@ -194,8 +208,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:visibility="gone">
-                </LinearLayout>
+                    android:visibility="gone"></LinearLayout>
 
             </LinearLayout>
 
