--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
 
     <color name="yellow">#f6db40</color>
     <color name="grey05">#64d1d1d1</color>
+    <color name="grey50">#888888</color>
     <color name="activeButton">#FFFFFF</color>
     <color name="disabledButton">#7fffffff</color>
     <color name="selectedButton">#ffd646</color>
