--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -113,6 +113,12 @@
         <item name="android:background">@drawable/block_text</item>
     </style>
 
+    <style name="timeText" parent="TextOnPages">
+        <item name="android:textSize">12sp</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:textColor">@color/grey50</item>
+    </style>
+
     <style name="defaultText" parent="TextOnPages">
         <item name="android:textSize">14sp</item>
         <item name="android:padding">10dp</item>
