--- a/app/src/main/res/layout/subscription_element.xml
+++ b/app/src/main/res/layout/subscription_element.xml
@@ -41,14 +41,15 @@
     <TextView
         android:id="@+id/unsubscribeSubscriptionElementText"
         style="@style/textItemRegular"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:fontFamily="@font/font_awesome_solid"
         android:gravity="center"
         android:text="@string/subscribe_heart"
         android:textColor="@color/red"
-        android:textSize="25sp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:textSize="25sp" />
 
 
 </LinearLayout>
