--- a/app/src/main/res/layout/edit_service.xml
+++ b/app/src/main/res/layout/edit_service.xml
@@ -96,8 +96,8 @@
                     android:layout_weight="1"
                     android:background="@color/panelColor"
                     android:backgroundTint="@color/panelColor"
-                    android:popupBackground="@color/panelColor"
-                    android:entries="@array/categoryForEditService" />
+                    android:entries="@array/categoryForEditService"
+                    android:popupBackground="@color/panelColor" />
             </LinearLayout>
 
             <LinearLayout
@@ -119,9 +119,9 @@
             <HorizontalScrollView
                 android:id="@+id/horizontalScrollView"
                 android:layout_width="match_parent"
-                android:scrollbars="none"
                 android:layout_height="@dimen/photo_height"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:scrollbars="none">
 
                 <LinearLayout
                     android:id="@+id/feedEditServiceLayout"
@@ -145,6 +145,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/saveData" />
+
+            <ProgressBar
+                android:id="@+id/progressBarEditService"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:indeterminateTint="@color/panelColor"
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 
