--- a/app/src/main/res/layout/dialogs.xml
+++ b/app/src/main/res/layout/dialogs.xml
@@ -15,6 +15,18 @@
         app:layout_constraintTop_toTopOf="parent">
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/noDialogsDialogsText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Нет диалогов"
+        android:visibility="gone"
+        style="@style/mainText"
+        app:layout_constraintBottom_toTopOf="@+id/footerDialogsLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerDialogsLayout"/>
+
     <ProgressBar
         android:id="@+id/progressBarDialogs"
         android:layout_width="wrap_content"
