--- a/app/src/main/res/layout/dialog_element.xml
+++ b/app/src/main/res/layout/dialog_element.xml
@@ -11,32 +11,43 @@
     tools:context=".adapters.chatElements.DialogElement">
 
     <LinearLayout
+        android:id="@+id/dialogElementLayoutSecond"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/white">
 
         <ImageView
             android:id="@+id/avatarDialogElementImage"
-            android:layout_marginEnd="10dp"
-            android:background="@color/white"
             android:layout_width="@dimen/photo_avatar_width"
             android:layout_height="@dimen/photo_avatar_height"
+            android:layout_marginEnd="10dp"
+            android:background="@color/white"
             tools:src="@tools:sample/avatars" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/dialogElementLayoutLast"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/white"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/nameDialogElementText"
             style="@style/mainTextMainScreen"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Name" />
 
+        <TextView
+            android:id="@+id/messageTimeDialogElementText"
+            style="@style/timeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:text="time" />
     </LinearLayout>
 </LinearLayout>
