Добавлены теги (AdditionService, EditionService, MainScreen) Исправлен баг с cancel notification

--- a/app/src/main/res/layout/edit_service.xml
+++ b/app/src/main/res/layout/edit_service.xml
@@ -78,32 +78,6 @@
                 style="@style/block"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/block_text"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/mainText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="Категория" />
-
-                <Spinner
-                    android:id="@+id/categoryEditServiceSpinner"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/panelColor"
-                    android:backgroundTint="@color/panelColor"
-                    android:entries="@array/categoryForEditService"
-                    android:popupBackground="@color/panelColor" />
-            </LinearLayout>
-
-            <LinearLayout
-                style="@style/block"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:background="@drawable/block_text">
 
                 <EditText
@@ -115,6 +89,11 @@
                     android:inputType="textMultiLine|textCapSentences" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/categoryEditServiceLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"/>
 
             <HorizontalScrollView
                 android:id="@+id/horizontalScrollView"
