--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,14 @@
         <item name="android:background">@drawable/main_button</item>
     </style>
 
+    <style name="lightBlueButton" parent="mainButton">
+        <item name="android:background">@drawable/tags_button</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textColorHint">@color/white</item>
+    </style>
+
     <style name="smallMainButtonOther" parent="mainButton">
         <item name="android:background">@drawable/main_button</item>
         <item name="android:width">172dp</item>
